--- a/main.css
+++ b/main.css
@@ -1,38 +1,234 @@
-body {
-  background-color: lavender;
+* {
+
+  box-sizing: border-box;
+
 }
 
-h1 {
-  color: black;
-  text-align: center;
-  background-color: white;
-}
-h2 {
-  color: black;
-  text-align: left;
-  background-color: white;
-}
 
-p {
-  font-family: Helvetica;
-  font-size: 20px;
-  background-color: lightgray;
-}
-.column {
-  float: left;
-  width: 25%;
-  padding: 6px;
-}
 
-/* Clear floats after image containers */
 .row::after {
+
   content: "";
+
   clear: both;
-  display: table;
-}
-.center {
+
   display: block;
-  margin-left: 185px;
-  margin-right: auto;
+
+}
+
+
+
+[class*="col-"] {
+
+  float: left;
+
+  padding: 15px;
+
+}
+
+
+
+html {
+
+  font-family: "Myriad Pro", sans-serif;
+
+}
+
+.aside {
+
+  background-color: #6A54A2;
+
+  padding: 21px;
+
+  color: #ffffff;
+
+  text-align: left;
+
+  font-size: 10px;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  width: 340px;
+
+  height: 915px;
+}
+
+.aside img{
+    box-shadow: 8px 5px 5px #3A3B3C;
+}
+
+.col-6 img{
+  box-shadow: 8px 5px 5px grey;
+}
+
+.footer {
+
+  background-color: #6A54A2;
+
+  color: #ffffff;
+
+  font-size: 12px;
+
+  padding: 15px;
+
+  display: flex;
+
+  align-items: left;
+
+  justify-content: space-around;
+
+}
+
+.footer img {
+
+    padding-right: 0px;
+    height: 50px;
+    width: 50px;
+
+
+}
+
+.footer p {
+  padding-right: 0px;
+}
+
+.header {
+
+  background-color: #6A54A2;
+
+  color: white;
+
+  padding: 15px;
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: space-around;
+
+
+}
+
+.header img {
+
+padding-right: 425px;
+
+
+}
+
+.header h1 {
+  padding-left: 425px;
+  text-shadow: 5px 5px 6px #3A3B3C;
+
+}
+
+
+.menu ul {
+
+  list-style-type: none;
+
+  margin: 0;
+
+  padding: 0;
+
+}
+
+
+
+.menu li {
+
+  padding: 6px;
+
+  margin-bottom: 7px;
+
+  background-color: #6A54A2;
+
+  color: #ffffff;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: space-around;
+
+}
+
+
+
+
+
+.menu li:hover {
+
+  background-color: lavender;
+
+}
+
+
+/* For desktop: */
+
+.col-1 {
+  width: 8.33%;
+}
+
+.col-2 {
+  width: 16.66%;
+}
+
+.col-3 {
+  width: 25%;
+}
+
+.col-4 {
+  width: 33.33%;
+}
+
+.col-5 {
+  width: 41.66%;
+}
+
+.col-6 {
   width: 50%;
+}
+
+.col-7 {
+  width: 58.33%;
+}
+
+.col-8 {
+  width: 66.66%;
+}
+
+.col-9 {
+  width: 75%;
+}
+
+.col-10 {
+  width: 83.33%;
+}
+
+.col-11 {
+  width: 91.66%;
+}
+
+.col-12 {
+  width: 100%;
+}
+
+
+
+@media only screen and (max-width: 667px) {
+
+  /* For mobile phones: */
+
+  [class*="col-"] {
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+
 }
